# CSES-Problem-Set

./: 0001-weird-algorithm.py  0001-weird-algorithm.rs  0002-missing-numbers.py  0002-missing-numbers.rs  0003-repetitions.py  0003-repetitions.rs  0004-increasing-array.py  0004-increasing-array.rs  0005-number-spiral.py  0005-number-spiral.rs  Cargo.toml
